Add new REST functions
